--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-rate-limit": "^5.3.0",
+    "joi": "^17.4.1",
+    "multer": "^1.4.2"
   }
 }
